src/test/resources/com/puppycrawl/tools/checkstyle/checks/javadoc/invalidjavadocposition/comment/package-info.java
/*
InvalidJavadocPosition


*/

/** violation */ // violation 'Javadoc .* placed in the wrong location.'
/** valid */
// comment
package com.puppycrawl.tools.checkstyle.checks.javadoc.invalidjavadocposition.comment;
